--- a/myProjects.html
+++ b/myProjects.html
@@ -6,7 +6,6 @@
     <!--references to the CSS documents for the website. I named the primary CSS file as "portfolio_main.css" in case we decide to split the CSS into multiple files-->
     <link rel="stylesheet" type="text/css" href="css/portfolio_main.css">
     <!--website javascript-->
-    <script src="js/portfolio.js"></script>
 </head>
 <body>
 	<!--NAVBAR-->
@@ -44,42 +43,45 @@
 		<h3 class="portfolio-section-header">My Projects</h3>
 	    <div class="box">
 	        <!-- PHOTO-CONTAINER 1 -->
-	        <!--image that, when clicked, calls the JavaScript function to open one of your favorite projects on Github-->
+	        <!--image that, when clicked, uses anchor to open one of your favorite projects on Github-->
 	        <div class="row">
 				<div class="photo-container">
-					<div class="photo">
-						<img src="images/coming_soon.jpg" alt="" id = "openModal">
-						<div class="photo-overlay" id="myModal">
-							<h3 class="white-head">Project Name</h3>
-							<button class = "ShowProject" onclick= "OpenProject()" >See more!</button>
+					<a href="" target="_blank">
+						<div class="photo">
+							<img src="images/coming_soon.jpg" alt="" >
+							<div class="photo-overlay">
+								<h3 class="white-head">Project Name</h3>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<!-- END PHOTO-CONTAINER 1 -->
 				
 				<!-- PHOTO-CONTAINER 2 -->
-				<!--image that, when clicked, calls the JavaScript function to open one of your favorite projects on Github-->
+				<!--image that, when clicked, uses anchor to open one of your favorite projects on Github-->
 				<div class="photo-container">
-					<div class="photo">
-						<img src="images/coming_soon.jpg" alt="">
-						<div class="photo-overlay">
-							<h3 class="white-head">Project Name</h3>
-							<button class = "ShowProject" onclick= "OpenProject2()" >See more!</button>
+					<a href="" target="_blank">
+						<div class="photo">
+							<img src="images/coming_soon.jpg" alt="">
+							<div class="photo-overlay">
+								<h3 class="white-head">Project Name</h3>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<!-- END PHOTO-CONTAINER 2 -->
 				
 				<!-- PHOTO-CONTAINER 3 -->
-				<!--image that, when clicked, calls the JavaScript function to open one of your favorite projects on Github-->
+				<!--image that, when clicked, uses anchor to open one of your favorite projects on Github-->
 				<div class="photo-container">
-					<div class="photo">
-						<img src="images/coming_soon.jpg" alt="">
-						<div class="photo-overlay">
-							<h3 class="white-head">Project Name</h3>
-							<button class = "ShowProject" onclick= "OpenProject3()" >See more!</button>
+					<a href="" target="_blank">
+						<div class="photo">
+							<img src="images/coming_soon.jpg" alt="">
+							<div class="photo-overlay">
+								<h3 class="white-head">Project Name</h3>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<!-- END PHOTO-CONTAINER 3 -->
 			</div>
@@ -90,7 +92,7 @@
 	<!--FOOTER-->
     <footer>
         <p>
-            <center>&copy Prosper Consulting Inc.,  <a onclick="OpenTechAcademy()" style="text-decoration: underline blue; color: blue;">The Tech Academy</a></center><br>
+            <center>&copy Prosper Consulting Inc.,   <a href="https://www.learncodinganywhere.com/" target="_blank" >The Tech Academy</a></center><br>
         </p>
     </footer>
     <!--END OF FOOTER->
